fix uneven border on rendered images - fixes #1054

--- a/github-dark.css
+++ b/github-dark.css
@@ -8647,7 +8647,7 @@
   .inline-comments .line-comments, #gist-form .gist-name-textbox,
   #adv_code_search .search-page-input, .fullscreen-overlay textarea,
   .file .image .border-wrap, .site-search .chromeless-input,
-  .profile-timeline-card-wrapper, .render-shell img, img.asset,
+  .profile-timeline-card-wrapper,
   .AvatarStack--right .avatar, .AvatarStack-body .avatar,
   .sidebar-notifications .thread-subscription-status,
   .repository-lang-stats-graph .language-color:not(:first-child),
